CatCommand Import Fix